0.9.2+
    fix memory leak on draw selection rectangle on desktop #397
    [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
    fix maximized panel sliders not restored #402
    README, man: update kernel polling instructions #403
0.9.2   2013-12-06:
    README correct packages link
    manual note full/max col widths not saved #382
    adjust maximized and fullscreen behavior #382
    add su-to-root support
    detect rename of current folder and close tab #243
    fix list view auto drag action on drop to last row #387
    add design menu Edit Script; F4 opens script in editor
    task manager absolute height #380
    fix icon/compact dbl-click selects file in selected dir #218 #389
    fix open foldername.iso as automount iso
    allow ~/ prefix in bookmarks and hacked session files
    fix task auto scroll first show
    add design menu Edit Command
    update changed translations
0.9.1   2013-11-06:
    [gtk 3.8] fix run dialog reverts to minimum size
    fix icon change not saved (bookmark, tab, devices, etc) #367
    sakura terminal use -x with single argument
    fix crash in save_settings #369
    new panel config memory #372
    fix build problem on gtk < 2.24 #368
    new root window use HOME=/root incase no env reset
    fix Export from desktop menu
    man panel memory
    task man change default cols to current speed and remain
    fix identification of empty optical drive
    change default device icons
    add lilyterm to emulators list
    remove erroneous files from pkg branch
    README added wiki link Guidelines For Distributing Modifications
    limit evt_win_move events to 5 per second #380
0.9.0   2013-10-22:
    add browse-for options in Rename/New dialog Browse dialog
    run fm Devices menu functions in task man
    let vfs task show run-task missing file errors
    desktop prefs - insensitive wallpaper options if unchecked
    file props dlg - show target type of relative link
    Devices menu activate Open on left-click